# VLM

./: .clang-format  .gitignore  .mailmap  CMakeLists.txt  GNUmakefile  Readme.md  VLM_configuration.h  byteswap_world.c  compile-alpha-emulator.lisp  dot.VLM  main.c  spy.c  spy.h  std.h  swapbytes.h  sysdcl.lisp  utilities.c  utilities.h  vlm.code-workspace  world_tools.c  world_tools.h
admin/: mprotect-bug.c  swapstat.c
alpha-emulator/: 000 - Emulator_System_Declaration.lisp  000 - SBCL_Support.lisp  000 - System_Definition.lisp  002 - Memory_Operations.lisp  003 - Stack_Interface.lisp  011 - Interpretation_Loop_Entry_Point.lisp  021 - Instructions_Dispatch_Loop.lisp  031 - Commonly_Used_1-functions.lisp  041 - Commonly_Used_2-functions.lisp  050 - Generic_Dispatch-macros.lisp  051 - Generic_Dispatch-functions.lisp  060 - Branch_and_Loop-macros.lisp  061 - Branch_and_Loop-functions.lisp  070 - Function_Calling-macros.lisp  071 - Function_Calling-functions.lisp  080 - List_Operations-macros.lisp  081 - List_Operations-functions.lisp  090 - Instance_Variable_Accessors-macros.lisp  091 - Instance_Variable_Accessors-functions.lisp  100 - ALU_Instructions-macros.lisp  100 - Arithmetic-macros.lisp  101 - Arithmetic-functions.lisp  110 - Array_Instructions-macros.lisp  111 - Array_Instructions-functions.lisp  121 - Data_Movement-functions.lisp  130 - Predicates-macros.lisp  131 - Predicates-functions.lisp  140 - Subprimitives-macros.lisp  141 - Subprimitives-functions.lisp  150 - Field_Extraction_Instractions-macros.lisp  151 - Field_Extraction_Instractions-functions.lisp  160 - Lexical_Variable_Accessors-macros.lisp  161 - Lexical_Variable_Accessors-functions.lisp  170 - Logical_Instructions_macros.lisp  171 - Logical_Instructions_functions.lisp  180 - Block_Instructions-macros.lisp  181 - Block_Instructions-functions.lisp  190 - Binding_Instructions-macros.lisp  191 - Binding_Instructions-functions.lisp  201 - Full_Word_Instructions-functions.lisp  (+61 more)
alpha-emulator/1-module_includes/: aihead.sid  traps.lisp
alpha-emulator/3-module_macros/: Assembler_Instructions-macros.lisp
assembler/: Assembler_Assembly_Emission.lisp  Assembler_Constants_File_Generator.lisp  Assembler_System_Compiler.lisp  Assembler_System_Declaration.lisp  alpha.lisp  alphadsdl.lisp  sct-support.lisp
c-emulator/: aihead.h  dispatch.c  dispatch.h  emulator.c  emulator.h  externals.c  initialization.c  ivory.h  memory.c  memory.h  traps.c  traps.h
emulator/: 1-Emulator_System_Declaration.lisp  2-SBCL_Support.lisp  3-Commonly_Used_1-functions.lisp  4-Commonly_Used_2-functions.lisp  5-Field_Extraction_Instructions-macros.lisp  6-Interpretation_Loop_Out_of_Line_Parts-Trapping.lisp  7-Native_Exception_CAR_CDR.lisp  8-Processor_Structure.lisp  Definitions-1-Memory_Operations.lisp  Definitions-10-Array_Instructions-macros.lisp  Definitions-11-Subprimitives-macros.lisp  Definitions-12-Lexical_Variable_Accessors-macros.lisp  Definitions-13-Logical_Instructions_macros.lisp  Definitions-14-Block_Instructions-macros.lisp  Definitions-15-Binding_Instructions-macros.lisp  Definitions-16-Flow_Trapping-macros.lisp  Definitions-17-AI_Instructions-macros.lisp  Definitions-2-Stack_Interface.lisp  Definitions-3-Generic_Dispatch-macros.lisp  Definitions-4-Branch_and_Loop-macros.lisp  Definitions-5-Function_Calling-macros.lisp  Definitions-6-List_Operations-macros.lisp  Definitions-7-Instance_Variable_Accessors-macros.lisp  Definitions-8-ALU_Instructions-macros.lisp  Definitions-9-Arithmetic-macros.lisp  Definitions-9-Predicates-macros.lisp  Emulator-1-Interpretation_Loop_Entry_Point.lisp  Emulator-10-Data_Movement-functions.lisp  Emulator-11-Predicates-functions.lisp  Emulator-12-Subprimitives-functions.lisp  Emulator-13-Field_Extraction_Instructions-functions.lisp  Emulator-13-Lexical_Variable_Accessors-functions.lisp  Emulator-14-Logical_Instructions_functions.lisp  Emulator-15-Block_Instructions-functions.lisp  Emulator-16-Binding_Instructions-functions.lisp  Emulator-17-Full_Word_Instructions-functions.lisp  Emulator-18-Bignums-functions.lisp  Emulator-19-Flow_Trapping-functions.lisp  Emulator-2-Instructions_Dispatch_Loop.lisp  Emulator-20-Floating_Point-functions.lisp  (+38 more)
emulator/1-module_includes/: aihead.sid  aistat.sid  traps.sid
environment/: introspection.c  introspection.h
g5-emulator/: aistat.c  aistat.h
life-support/: BootComm.h  FEPComm.h  SystemComm.c  SystemComm.h  cold_load.c  cold_load_keymappings.h  console.c  disks.c  embed.h  genera-cptfont.c  genera-icon-32.c  initialization.c  life_prototypes.h  life_types.h  message_channels.c  network-darwin.c  network-libpcap.c  network-linux.c  network-osf.c  network-tun-linux.c  network.c  pfilt_wrapper.h  polling.c  queues.c  signals-ptw.c  signals.c  symbolics_characters.h
nisp/: nisp.nim
other/: pfopen.c
stub/: blanks.c  clisp-support.lisp  convert-asm-to-c.lisp.lisp  diff  diff_important.diff  dispatch.c  float.c  float2  full_stub.c  intrpmac.lisp  output.c  output03.c  output05.c  output06.c  output08.c  output1.c  output10.c  output11.c  output12.c  output13.c  output14.c  output15.c  output16.c  output17.c  output18.c  output19.c  output2.c  output20.c  output21.c  output22.c  output23.c  output24.c  output25.c  output26.c  output3.c  output4.c  output5.c  output6.c  output7.c  output8.c  (+30 more)
x86_64-emulator/: aistat.h
